# GameProject

./: CMakeLists.txt  README.md  imgui.ini
assets/: config.txt
headers/: CCollision.h  CInput.h  CLifespan.h  CScore.h  CShape.h  CTransform.h  Entity.h  Game.h  Random.h  animation.h  collider.h  entityManager.h  platform.h  player.h
headers/components/: animation.h  collider.h  component.h
headers/entities/: bullet.h  enemy.h  entity.h  player.h
src/: EntityManager.cpp  Game.cpp  animation.cpp  collider.cpp  main.cpp  platform.cpp  player.cpp
src/entities/: player.cpp
src/systems/: sSpawn.cpp
